AC_INIT(src/cfrefcount.c)
AC_CONFIG_HEADERS(config.h)

PACKAGE=cfng
VERSION=0.0.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_PROG_CC
AC_USE_SYSTEM_EXTENSIONS
AC_HEADER_STDC
AC_HEADER_STDBOOL
LT_INIT
AC_CONFIG_MACRO_DIR([m4])
AC_CHECK_HEADERS(CUnit/CUnit.h pthread.h)
AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_LIB(cunit, CU_initialize_registry)

AC_OUTPUT(Makefile src/Makefile tests/Makefile tests/auto/Makefile tests/auto/cfrefcount/Makefile tests/auto/cfbytearray/Makefile)
